# python-boilerplate

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  renovate.json  ruff.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  release.yml  update-deps.yml
docker/: Dockerfile
scripts/: bootstrap.py  bootstrap.sh
src/python_boilerplate/: cli.py  config.py  logging_config.py  web.py
